src/test/ui/rfc-2093-infer-outlives/explicit-union.stderr
error: rustc_outlives
  --> $DIR/explicit-union.rs:16:1
   |
LL | / union Foo<'b, U> { //~ ERROR 16:1: 18:2: rustc_outlives
LL | |     bar: Bar<'b, U>
LL | | }
   | |_^
   |
   = note: U : 'b

error: aborting due to previous error

